--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.5",
     "gulp-cssnano": "^2.1.2",
+    "gulp-pug": "^3.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "simple-line-icons": "^2.4.1"
